@@ -44,28 +44,66 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
+				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>com.bogdanmierloiu.Main</mainClass>
+							<mainClass>src/main/java/com/bogdanmierloiu/Main.java</mainClass>
 						</manifest>
 					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.2.5</version>
-				<configuration>
-   					<argLine>--add-opens=java.base/java.util=ALL-UNNAMED
-						--add-opens=java.base/java.lang=ALL-UNNAMED
-						--add-opens=java.base/java.invoke=ALL-UNNAMED</argLine>
-				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<!--  this is used for inheritance merges  -->
+						<phase>package</phase>
+						<!--  bind to the packaging phase  -->
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
+
+<!--	<build>-->
+<!--		<plugins>-->
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-compiler-plugin</artifactId>-->
+<!--				<version>3.5.1</version>-->
+<!--				<configuration>-->
+<!--					<source>1.8</source>-->
+<!--					<target>1.8</target>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--			<plugin>-->
+<!--				<artifactId>maven-jar-plugin</artifactId>-->
+<!--				<version>3.0.2</version>-->
+<!--				<configuration>-->
+<!--					<archive>-->
+<!--						<manifest>-->
+<!--							<mainClass>com.bogdanmierloiu.Main</mainClass>-->
+<!--						</manifest>-->
+<!--					</archive>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-surefire-plugin</artifactId>-->
+<!--				<version>3.2.5</version>-->
+<!--				<configuration>-->
+<!--   					<argLine>&#45;&#45;add-opens=java.base/java.util=ALL-UNNAMED-->
+<!--						&#45;&#45;add-opens=java.base/java.lang=ALL-UNNAMED-->
+<!--						&#45;&#45;add-opens=java.base/java.invoke=ALL-UNNAMED</argLine>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--		</plugins>-->
+<!--	</build>-->
 
 
 
